// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`create-an-issue creates a new issue 1`] = `
Object {
  "assignees": Array [],
  "body": "Goodbye!",
  "labels": Array [],
  "title": "Hello!",
}
`;

exports[`create-an-issue creates a new issue 2`] = `
Array [
  Array [
    "Created issue Hello!#1: www",
  ],
]
`;

exports[`create-an-issue creates a new issue from a different template 1`] = `
Object {
  "assignees": Array [],
  "body": "Goodbye!",
  "labels": Array [],
  "title": "Different file",
}
`;

exports[`create-an-issue creates a new issue from a different template 2`] = `
Array [
  Array [
    "Created issue Different file#1: www",
  ],
]
`;

exports[`create-an-issue creates a new issue with a milestone passed by input 1`] = `
Object {
  "assignees": Array [
    "octocat",
    "JasonEtco",
  ],
  "body": "Goodbye!",
  "labels": Array [],
  "milestone": "1",
  "title": "Hello!",
}
`;

exports[`create-an-issue creates a new issue with an assignee passed by input 1`] = `
Object {
  "assignees": Array [
    "octocat",
  ],
  "body": "Goodbye!",
  "labels": Array [],
  "title": "Hello!",
}
`;

exports[`create-an-issue creates a new issue with an assignee passed by input 2`] = `
Array [
  Array [
    "Created issue Hello!#1: www",
  ],
]
`;

exports[`create-an-issue creates a new issue with assignees and labels as comma-delimited strings 1`] = `
Object {
  "assignees": Array [
    "JasonEtco",
    "matchai",
  ],
  "body": "The action create-an-issue is the best action.",
  "labels": Array [
    "bug",
    "enhancement",
  ],
  "title": "DO EVERYTHING",
}
`;

exports[`create-an-issue creates a new issue with assignees and labels as comma-delimited strings 2`] = `
Array [
  Array [
    "Created issue DO EVERYTHING#1: www",
  ],
]
`;

exports[`create-an-issue creates a new issue with assignees, labels and a milestone 1`] = `
Object {
  "assignees": Array [
    "JasonEtco",
  ],
  "body": "The action create-an-issue is the best action.",
  "labels": Array [
    "bugs",
  ],
  "milestone": 2,
  "title": "DO EVERYTHING",
}
`;

exports[`create-an-issue creates a new issue with assignees, labels and a milestone 2`] = `
Array [
  Array [
    "Created issue DO EVERYTHING#1: www",
  ],
]
`;

exports[`create-an-issue creates a new issue with multiple assignees passed by input 1`] = `
Object {
  "assignees": Array [
    "octocat",
    "JasonEtco",
  ],
  "body": "Goodbye!",
  "labels": Array [],
  "title": "Hello!",
}
`;

exports[`create-an-issue creates a new issue with multiple assignees passed by input 2`] = `
Array [
  Array [
    "Created issue Hello!#1: www",
  ],
]
`;

exports[`create-an-issue creates a new issue with some template variables 1`] = `
Object {
  "assignees": Array [],
  "body": "The action create-an-issue is the best action.

Environment variable foo is great.
",
  "labels": Array [],
  "title": "Hello create-an-issue",
}
`;

exports[`create-an-issue creates a new issue with some template variables 2`] = `
Array [
  Array [
    "Created issue Hello create-an-issue#1: www",
  ],
]
`;

exports[`create-an-issue logs a helpful error if creating an issue throws an error 1`] = `
Array [
  Array [
    "An error occurred while creating the issue. This might be caused by a malformed issue title, or a typo in the labels or assignees. Check .github/ISSUE_TEMPLATE.md!",
  ],
  Array [
    [HttpError: Validation error],
  ],
]
`;

exports[`create-an-issue logs a helpful error if creating an issue throws an error with more errors 1`] = `
Array [
  Array [
    "An error occurred while creating the issue. This might be caused by a malformed issue title, or a typo in the labels or assignees. Check .github/ISSUE_TEMPLATE.md!",
  ],
  Array [
    [HttpError: Validation error: {"foo":true}],
  ],
  Array [
    Array [
      Object {
        "foo": true,
      },
    ],
  ],
]
`;
